force-app/main/default/objects/vlocity_cmt__CartItem__c/fields/vlocity_cmt__ItemImageUrl__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ItemImageUrl__c</fullName>
    <description>URL to an image of this item.</description>
    <label>Product Image</label>
    <type>Url</type>
</CustomField>