force-app/main/default/objects/vlocity_cmt__CartItem__c/fields/vlocity_cmt__Product2Id__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Product2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the product (if known).</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Cart Items</relationshipLabel>
    <relationshipName>CartItemsProduct</relationshipName>
    <type>Lookup</type>
</CustomField>