force-app/main/default/objects/vlocity_cmt__CartItem__c/fields/vlocity_cmt__RecurringTotal__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__RecurringTotal__c</fullName>
    <description>Total monthly recurring charges for this line item.</description>
    <label>Total: Monthly Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>